<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <View
        android:id="@+id/view1"
        android:layout_width="260dp"
        android:layout_height="103dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/tviewup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_de_login_examen"
        android:textColor="@color/texto"
        android:textSize="26sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.523" />
    <TextView
        android:id="@+id/textViewusuario"
        android:layout_width="251dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/nombre_de_usuario"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:hint="@string/introduzca_nombre_usuario"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewusuario"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="251dp"
        android:layout_height="32dp"
        android:text="@string/contrase_a"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="Introduce password"
        android:textStyle="italic"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/loginbut"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/texto"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.409" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbut" />
</androidx.constraintlayout.widget.ConstraintLayout>